# thi-trac-nghiem-cpp

./: .cursorignore  .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  build_and_run.bat  build_and_run.sh  build_test.bat  main.cpp  main_test.cpp  mainwindow.cpp  mainwindow.h
controllers/: AuthController.cpp  AuthController.h
data/: classes.txt  lop.txt  monhoc.txt  subjects.txt
data/cauhoi/: cauhoi_ATBM.txt  cauhoi_CSDL.txt  cauhoi_CTDL.txt  cauhoi_HDH.txt  cauhoi_KTPT.txt  cauhoi_MAHOA.txt  cauhoi_MMT.txt  cauhoi_OOP.txt  cauhoi_PEN.txt  cauhoi_WEB.txt
data/diemthi/: diemthi_N22DCCN001.txt  diemthi_SV001.txt  diemthi_SV002.txt
data/questions/: monkhoa_questions.txt
data/sinhvien/: sinhvien_CNTT01.txt  sinhvien_D22CQAT01.txt  sinhvien_D22CQCN01.txt  sinhvien_D22CQCN02.txt
data/students/: TEST_students.txt  lopkhoa_students.txt
include/controllers/: datacontroller.h  examcontroller.h
include/core/: appmanager.h  authentication.h
include/manager/: quanlycauhoi.h  quanlydiem.h  quanlylop.h  quanlymonhoc.h  quanlysinhvien.h
include/models/: cauhoi.h  diemthi.h  lop.h  monhoc.h  quanlythi.h  sinhvien.h
include/ui/: classmanagementwidget.h  dashboardwidget.h  examwidget.h  loginwidget.h  mainwindow.h  questionmanagementwidget.h  reportwidget.h  studentmanagementwidget.h  subjectmanagementwidget.h
include/utils/: Array.h  BinaryTree.h  DynamicArray.h  LinkedList.h
managers/: QuanLyCauHoi.cpp  QuanLyCauHoi.h  QuanLyDiem.cpp  QuanLyDiem.h  QuanLyLop.cpp  QuanLyLop.h  QuanLyMonHoc.cpp  QuanLyMonHoc.h  QuanLySinhVien.cpp  QuanLySinhVien.h  QuanLyThi.cpp  QuanLyThi.h  ReportUtil.cpp  ReportUtil.h  ThongKe.cpp  ThongKe.h  quanlycauhoi.cpp  quanlycauhoi.h  quanlydiem.cpp  quanlydiem.h  quanlylop.cpp  quanlylop.h  quanlymonhoc.cpp  quanlymonhoc.h  quanlysinhvien.cpp  quanlysinhvien.h
models/: CauHoi.cpp  CauHoi.h  DiemThi.cpp  DiemThi.h  Lop.cpp  Lop.h  MonHoc.cpp  SinhVien.cpp  cauhoi.cpp  cauhoi.h  diemthi.cpp  diemthi.h  lop.cpp  lop.h  monhoc.cpp  monhoc.h  sinhvien.cpp  sinhvien.h
program/: cauhoi.cpp  cauhoi.h  define.h  diemthi.cpp  diemthi.h  lop.cpp  lop.h  main.cpp  monhoc.h  sinhvien.h
src/: cauhoi.cpp  cauhoi.h  define.h  diemthi.cpp  lop.cpp  main.cpp  monhoc.cpp  monhoc.h  sinhvien.cpp  sinhvien.h  utility.cpp
src/controllers/: datacontroller.cpp  examcontroller.cpp
src/core/: appmanager.cpp  authentication.cpp
src/manager/: quanlycauhoi.cpp  quanlydiem.cpp  quanlylop.cpp  quanlymonhoc.cpp  quanlysinhvien.cpp
src/models/: cauhoi.cpp  diemthi.cpp  lop.cpp  monhoc.cpp  quanlythi.cpp  sinhvien.cpp
src/ui/: classmanagementwidget.cpp  dashboardwidget.cpp  examwidget.cpp  loginwidget.cpp  mainwindow.cpp  questionmanagementwidget.cpp  reportwidget.cpp  studentmanagementwidget.cpp  subjectmanagementwidget.cpp
utils/: BinaryTree.h  DynamicArray.h  InputValidator.cpp  InputValidator.h  LinkedList.h  ValidationHelper.cpp  ValidationHelper.h
views/: DetailedResultsWidget.cpp  DetailedResultsWidget.h  ExamWidget.cpp  ExamWidget.h  StudentDashboard.cpp  StudentDashboard.h  TeacherDashboard.cpp  TeacherDashboard.h
